# ADCensus

./: .gitignore  cones.bat  ligne_de_commande.txt  questions.txt  teddy.bat  tsukuba.bat  venus.bat
ADCensus_Build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Stereo.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
ADCensus_Build/convert/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  convert.sln  convert.vcxproj  convert.vcxproj.filters
ADCensus_Build/ipch/io-51013416/: io-93eee2bf.ipch
ADCensus_Build/ipch/stereo-ea08d7ca/: stereo-4e3338f9.ipch  stereo-b588873.ipch
ADCensus_Build/lib/Debug/: IO.lib  Stereo.lib  convert.exp  convert.lib  png.lib  stereoDense.exp  stereoDense.lib  tiff.lib  zlibd.lib
ADCensus_Build/lib/Release/: IO.lib  Stereo.lib  convert.exp  convert.lib  png.lib  stereoDense.exp  (+3 more)
ADCensus_Build/libIO/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  IO.vcxproj  IO.vcxproj.filters  cmake_install.cmake  libIO.sln
ADCensus_Build/libLWImage/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
ADCensus_Build/libStereo/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Stereo.vcxproj  Stereo.vcxproj.filters  cmake_install.cmake  libStereo.sln
ADCensus_Build/stereoDense/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  stereoDense.sln  stereoDense.vcxproj  stereoDense.vcxproj.filters
ADCensus_CMake/: ADCensus.sln  ADCensus.vcxproj  ADCensus.vcxproj.filters  CMakeLists.txt
ADCensus_CMake/Debug/: ADCensus.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  vc100.idb
ADCensus_CMake/Release/: ADCensus.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog
ADCensus_CMake/convert/: CMakeLists.txt  convert.cpp
ADCensus_CMake/libIO/: CMakeLists.txt  draw.c
ADCensus_CMake/libStereo/: CMakeLists.txt  occlusion.cpp  occlusion.h  patch.cpp  patch.h  scanlineOptimization.cpp  scanlineOptimization.h
ADCensus_CMake/stereoDense/: CMakeLists.txt  parameters.cpp  parameters.h  stereoDense.cpp
ADCensus_IPOL_article/: ADCensus_IPOL.aux  ADCensus_IPOL.bbl  ADCensus_IPOL.blg  ADCensus_IPOL.out  ADCensus_IPOL.tex  ADCensus_MOPSI.aux  ADCensus_MOPSI.dvi  ADCensus_MOPSI.tex  ipol.cls  ipol_logo.eps  literature.bib
(+93 files in other folders)
